keycloakmanifestfile/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloakafrilins
  labels:
    app: keycloakafrilins
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloakafrilins
      type: backend
  template:
    metadata:
      labels:
        app: keycloakafrilins
        type: backend
    spec:
      containers:
      - name: keycloakafrilins
        image: quay.io/keycloak/keycloak:21.1.1
        args: ["start-dev"]   
        ports:
          - name: api
            containerPort: 8080
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
