keycloakmanifestfile/service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-keycloak
spec:
  selector:
    app: keycloakafrilins 
    type: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080  
      name: http-backend
      nodePort: 30100
