keycloakmanifestfile/virtualServiceBackAdmin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-backend-vs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:    
    - uri:
        prefix: "/v1/api/modes"
    - uri:
        prefix: "/v1/api/modules"
    - uri:
        prefix: "/v1/api/connexion"
    - uri:
        prefix: "/v1/api/permissions"
    - uri:
        prefix: "/v1/api/rolePolicyPermissions"
    - uri:
        prefix: "/v1/api/applications"    
    - uri:
        prefix: "/v1/api/poste-utilisateurs"
    - uri:
        prefix: "/v1/api/profiles"
    - uri:
        prefix: "/v1/api/roles"
    - uri:
        prefix: "/v1/api/utilisateur-app-hs"
    - uri:
        prefix: "/v1/api/utilisateur-apps"
    - uri:
        prefix: "/v1/api/utilisateur-exercice-hs"
    - uri:
        prefix: "/v1/api/utilisateur-exercices"
    - uri:
        prefix: "/v1/api/utilisateur-modes"
    - uri:
        prefix: "/v1/api/utilisateur-module-hs"
    - uri:
        prefix: "/v1/api/utilisateur-modules"
    - uri:
        prefix: "/v1/api/utilisateurs"
    - uri:
        prefix: "v1/api/utilisateur-centres/centre"    
    route:
    - destination:
        host: service-admin.default.svc.cluster.local    
        port:
          number: 1994
